fix: Changing webpack configs and refactoring components

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="tokens/globals.css" />
-  <link rel="stylesheet" type="text/css" href="tokens/marca-a/tema-1//light.css" />
+  <link rel="stylesheet" type="text/css" href="tokens/brand-a/theme-2/light.css" />
 </head>
 <body>
   <dsc-button>Teste</dsc-button>
   <dsc-button disabled>Teste 2</dsc-button>
+  <dsc-button loading>Teste 3</dsc-button>
 
 </body>
 </html>
